add kota bandung

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Bandung</h1>
+    <h1>Kota Bandung</h1>
     <p lang="en" translate="yes">Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi
         tersebut.</p>
 
