tambahan baru raya

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p lang="en" translate="yes">Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi
         tersebut.</p>
 
-    <h2>Sejarah Kota Bandung</h2>
+    <h2>Sejarah Kota Bandung Raya</h2>
     <p>Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai Citarum oleh lava Gunung
         Tangkuban Parahu yang lalu membentuk telaga. Legenda yang diceritakan oleh orang-orang tua di Bandung mengatakan
         bahwa nama Bandung diambil dari sebuah kendaraan air yang terdiri dari dua perahu yang diikat berdampingan yang
